--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arcanejs/toolkit",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "private": false,
   "description": "Build web-accessible control interfaces for your long-running Node.js processes",
   "keywords": [
@@ -112,6 +112,7 @@
     "@arcanejs/eslint-config": "workspace:^",
     "@arcanejs/toolkit-frontend": "workspace:^",
     "@arcanejs/typescript-config": "workspace:^",
+    "@types/escape-html": "^1.0.4",
     "@types/eslint": "^8.56.5",
     "@types/express": "^5.0.0",
     "@types/lodash": "^4.17.10",
@@ -131,6 +132,7 @@
   "dependencies": {
     "@arcanejs/diff": "workspace:^",
     "@arcanejs/protocol": "workspace:^",
+    "escape-html": "^1.0.3",
     "express": "^4.21.1",
     "lodash": "^4.17.21",
     "material-symbols": "^0.25.0",
